# athena

./: .env.example  .gitattributes  .gitignore  ANTIGRAVITY_REPORT.md  LICENSE  README.md  WRITEUP.md  docker-compose.yml  render.yaml
services/api/: Dockerfile  pyproject.toml
services/api/athena/: cache.py  config.py  db.py  embed.py  fetch.py  log.py  memory.py  migrate.py  rag.py  runner.py  tokens.py
services/api/athena/agents/: controller.py  coverage.py  entail.py  graph.py  graphmem.py  guard.py  hop.py  persist.py  planner.py  quality.py  recheck.py  select.py  synthesizer.py  urlhealth.py  validator.py  verifier.py
services/api/migrations/: 001_init.sql  002_keys.sql  003_report_meta.sql  004_eval.sql  005_memory.sql  006_indexes.sql  007_trust.sql  008_graph.sql  009_integrity.sql  010_eval_metrics.sql
services/api/tests/: conftest.py  test_aggregate_risk.py  test_api_runs.py  test_audit_f003_f013_f016_f017.py  test_audit_fixes.py  test_audit_retrieval.py  test_auth.py  test_cache.py  test_cancel.py  test_controller.py  test_coverage.py  test_db.py  test_e2e_deep.py  test_embed.py  test_enforce_grounding.py  test_entail.py  test_eval.py  test_events.py  test_fetch.py  test_gateway_llm.py  test_gateway_registry.py  test_graph.py  test_graph_digest.py  test_graphmem.py  test_guard.py  test_hardening.py  test_hardening_pass.py  test_health_db.py  test_hop.py  test_integration.py  test_keys.py  test_keys_secret.py  test_ladder.py  test_logging.py  test_master.py  test_mcp_server.py  test_memory.py  test_metrics.py  test_migrate.py  test_orchestrator.py  (+31 more)
(+98 files in other folders)
