[project]
name = "athena-api"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.32", "httpx>=0.27",
  "litellm>=1.50", "mcp>=1.28",
  "asyncpg>=0.30", "redis>=5.0", "pydantic>=2.9", "pydantic-settings>=2.5",
  "ddgs>=6.0", "markdown-it-py>=3.0", "xhtml2pdf>=0.2.16", "sse-starlette>=2.1",
  "cryptography>=43", "fastembed>=0.4", "trafilatura>=2.0", "numpy>=1.26", "defusedxml>=0.7",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "respx>=0.21", "anyio>=4.6"]
# opt-in headless-browser fallback for JS-rendered pages; enable with JS_FETCH=1 and run `playwright install chromium`
js = ["playwright>=1.45"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["athena*"]
